# Dual_Threshold_Optimization

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.md  README.md  README_Cluster.md
.github/workflows/: linting.yml  release.yml  tests.yml
Code/: compileResults.py  computeAcceptableTFs.py  createBinaryEdgeFile.py  loadData.py  rankNetwork.py  runDualThreshold.py  summarizeFinalResults.py  thresholdSearch.py
CodeSingleCPU/: computeAcceptableTFs.py  createBinaryEdgeFile.py  runDualThreshold.py  thresholdSearch.py
CodeSlurm/: compileResults.py  computeAcceptableTFs.py  createBinaryEdgeFile.py  loadData.py  rankNetwork.py  runDualThreshold.py  runDualThreshold_orig.py  statistics.py  thresholdSearch.py
Data/CallingCards/: Data.csv  GeneNames.csv  TFNames.csv
Data/HarbisonYPD/: TFNames.csv
Data/NetProphet_Z_15_45_90_150K/: TFNames.csv
Examples/: CallingCards_ZEV15_gene_universe.txt  CallingCards_binding_data.csv  Yeast_DNA_binding_TFs.txt  Yeast_gene_name_lookup.csv
Expected Results/: acceptableTFs.csv
ExtraFiles/: Harbison_NetProphet_Z_Universe.txt  YeastCommonAndSystematicGeneNames.csv
RawData/NP_ZEV_15_45_90/: genes  regulators
Results/: TFcutoffs.csv  edges.csv  output.csv  output_rand.csv  summary.txt  targets.csv
Results_CallingCards_NetProhet_ZEV/: TFcutoffs.csv  acceptableTFs.csv  edges.csv  output.csv  output_rand.csv  summary.txt  targets.csv
Results_NP_ZEV_Harbison/: TFcutoffs.csv  acceptableTFs.csv  edges.csv  output.csv  output_rand.csv  summary.txt  targets.csv
Test2/authentic_model/: BACH1.csv  NFE2L2.csv  runAnalysis.sbatch
Test2/authentic_model/log/: runDTO_24824348_0.out  runDTO_24824348_1.out
profiling/: README  hyperfine_results.json  time_result.txt
src/: lib.rs  main.rs
src/collections/: feature.rs  feature_list.rs  mod.rs  permuted.rs  ranked.rs  traits.rs  unique_check.rs
src/core/: gene.rs  gene_list.rs  hypergeometric_pvalue.rs  intersect_genes.rs  mod.rs  optimize.rs  ranked_gene_list.rs  unique_check.rs
src/dto/: compute_population_size.rs  mod.rs  optimize_main.rs  process_threshold_pairs.rs  results_objects.rs
src/read/: mod.rs  read_feature_list_from_file.rs  read_ranked_feature_list_from_csv.rs
src/run/: mod.rs  multi_node.rs  single_node.rs  task.rs
src/stat_operations/: empirical_pvalue.rs  fdr.rs  hypergeometric_pvalue.rs  intersect_genes.rs  mod.rs
test_data/: background.txt  ranklist1.csv  ranklist2.csv
