[package]
name = "dual_threshold_optimization"
author = [
    "Chase Mateusiak <chasem@wustl.edu>"
]
description = ""
version = "2.0.0"
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"

exclude = [
    "profiling",
    "tmp",
    "test_data"
]

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.21", features = ["derive"] }
mpi = { version = "0.8.0", optional = true }
rand = "0.8.5"
serde = {version = "1.0.215", features = ["derive"] } 
serde_json = "1.0.133"
statrs = "0.17.1"

# for use with heaptrack. Build like so:
# CARGO_TARGET_DIR=target-debug cargo build --profile release-debug
[profile.release-debug]
inherits = "release"
debug = true

[lib]
crate-type = ["rlib"]

[features]
mpi = ["dep:mpi"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "path-to-your-header-file.html" ]

[[bin]]
name = "dual_threshold_optimization"
path = "src/main.rs"