[package]
name = "dual_threshold_optimization"
author = [
    "Chase Mateusiak <chasem@wustl.edu>"
]
description = """
Dual Threshold Optimization compares two ranked lists of features (e.g. genes) 
to determine the rank threshold for each list that minimizes the hypergeometric 
p-value of the overlap of features. It then calculates a permutation based 
empirical p-value and an FDR. Details can be found [in this paper](https://doi.org/10.1101/gr.259655.119)
"""
version = "2.0.1"
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"

exclude = [
    "profiling",
    "tmp",
    "test_data"
]

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.21", features = ["derive"] }
mpi = { version = "0.8.0", optional = true }
rand = "0.8.5"
serde = {version = "1.0.215", features = ["derive"] } 
serde_json = "1.0.133"
statrs = "0.17.1"

# for use with heaptrack. Build like so:
# CARGO_TARGET_DIR=target-debug cargo build --profile release-debug
[profile.release-debug]
inherits = "release"
debug = true

[lib]
crate-type = ["rlib"]

[features]
mpi = ["dep:mpi"]

# enable mpi features to be always documented
[package.metadata.docs.rs]
features = ["mpi"]

[[bin]]
name = "dual_threshold_optimization"
path = "src/main.rs"